# public-dashboard

./: .gitignore  README.md  app.js  index.html  pyproject.toml
.github/workflows/: update-dashboard.yml
data/: metrics.json
docs/: app.js  index.html  style.css
docs/data/: metrics.json
freedom_tracker/: com.dashboard.freedom-summary.plist  com.dashboard.freedom-tracker.plist  daily_summary.py  install.sh  tracker.py
pipeline/: config.yaml  google_sheets.py  http.py  main.py  notify.py  scoring.py  todoist.py  toggl.py
